-
Bug
-
Resolution: Done
-
P2: Important
-
Qt Creator 4.14.2
-
None
-
-
9db6569c43bd2acfb453b5e67f13d7f0ee4448a6 (qt-creator/qt-creator/master)
I just suffered from the misbehavior of some new Google Test projects that are run using Qt Creator. The Test Plugin was not able to find the tests. Still the application could be started and the test results were be printed to the console as plain text.
After a lot of try and error I found that the Test Plugin does not play well with precompiled headers. When placing the Google Test headers (#include <gtest/gtest.h>
and #include <gmock/gmock-matchers.h>) in the precompiled header only, tests are not found. When placing them directly in the test code files, it works.
For Gerrit Dashboard: QTCREATORBUG-25821 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
352770,5 | AutoTest: Take precompiled headers into account | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |